improved for desktop scrolling, to ensure elements stay aligned

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -1,4 +1,20 @@
 #rate-manager {
+    ::-webkit-scrollbar
+    {
+      width: 6px;  /* for vertical scrollbars */
+      height: 6px; /* for horizontal scrollbars */
+    }
+
+    ::-webkit-scrollbar-track
+    {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb
+    {
+      background: linear-gradient(-90deg, #ff860d 0, #ffb319 100%) !important;
+      border-radius:9px;
+    }
   .iScrollIndicator{
       background: linear-gradient(-90deg, #ff860d 0%, #ffb319 100%) !important;
   }
@@ -388,6 +404,11 @@
     .content{
         margin-left: 220px;
     }
+    span{
+          white-space: nowrap;   
+          overflow: hidden;   
+          text-overflow: ellipsis;
+      }
   table {
   }
 
@@ -435,7 +456,6 @@
 
         &:first-child {
           width: 85%;
-          white-space: nowrap;
           float: left;
           cursor: pointer;
 
@@ -461,10 +481,12 @@
     padding: 0 5px 0 5px;
   }
 
-  thead tr th:not(:first-child) {
+//  thead tr th:not(:first-child) {
+  //  padding: 5px 5px 0px 5px;
+ // }
+thead tr th {
     padding: 5px 5px 0px 5px;
   }
-
   .cell-container{
     /*CICO-8633 10/20/2014*/
     border-top: 3px solid rgba(0,0,0, 0.05);
@@ -490,6 +512,9 @@
   .cell {
     //width: 100%;
     position: relative;
+    border-style:solid;
+    border-width:1px;
+    border-color:transparent;//forces tables inline when multi-scrolling
   }
 
   .cell-overlay {
@@ -1701,30 +1726,12 @@ padding-top: 80px;
   z-index: -1;
 }
 
-
-.pinnedTable {
-  float: left;
-  height: 78%;
-  overflow: hidden;
-}
-
-.pinnedTable td {
-  position: relative;
-  font-weight: bold;
-  line-height: 18px;
-  text-align: left;
-}
-.pinnedTable td.wrap {
-  white-space: normal;
-}
-
-.pinnedTable td .inner.wrap {
-  white-space: normal;
-}
-
 .scrollBound{
     margin: auto;
 }
-.pinLeft{
-    float:left;
+.pinnedLeft{
+    float: left; 
+    overflow: hidden;
 }
+
+
